--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -7,7 +7,7 @@ http {
         location / {
             include /etc/nginx/mime.types;
             root /usr/share/nginx/html;
-            index index.html;
+            index LoginPage.html;
         }
 
         location /api/ {
