--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -11,7 +11,7 @@ http {
         }
 
         location /api/ {
-            proxy_pass http://backend:3000/;
+            proxy_pass http://LegoGoonsBackEnd:3000/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
         }
