--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,19 +6,19 @@ services:
       - "80:80"
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
-      - ./frontend/public:/usr/share/nginx/html:ro
+      - ./Frontend/Public:/usr/share/nginx/html:ro
     depends_on:
       - backend
     networks:
       - mynetwork
 
   backend:
-    build: ./backend
+    build: ./Backend
     container_name: LegoGoonsBackEnd
     env_file:
       - .env  # Load environment variables
     volumes:
-      - ./backend:/app
+      - ./Backend:/app
     depends_on:
       - db
     networks:
